--- a/src/bitcoin-tx-res.rc
+++ b/src/bitcoin-tx-res.rc
@@ -21,7 +21,7 @@ BEGIN
             VALUE "FileVersion",        VER_FILEVERSION_STR
             VALUE "InternalName",       "bitcoin-tx"
             VALUE "LegalCopyright",     COPYRIGHT_STR
-            VALUE "LegalTrademarks1",   "Distributed under the MIT software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
+            VALUE "LegalTrademarks1",   "Distributed under the conjunctive terms of BOTH the GNU Affero General Public License v3.0 and the MIT software license, see the accompanying file COPYING for details."
             VALUE "OriginalFilename",   "bitcoin-tx.exe"
             VALUE "ProductName",        "bitcoin-tx"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
