--- a/src/bitcoind-res.rc
+++ b/src/bitcoind-res.rc
@@ -21,7 +21,7 @@ BEGIN
             VALUE "FileVersion",        VER_FILEVERSION_STR
             VALUE "InternalName",       "bitcoind"
             VALUE "LegalCopyright",     COPYRIGHT_STR
-            VALUE "LegalTrademarks1",   "Distributed under the MIT/X11 software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
+            VALUE "LegalTrademarks1",   "Distributed under the conjunctive terms of BOTH the GNU Affero General Public License v3.0 and the MIT/X11 software license, see the accompanying file COPYING for details."
             VALUE "OriginalFilename",   "bitcoind.exe"
             VALUE "ProductName",        "Bitcoind"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
