--- a/contrib/vagrant/Vagrantfile
+++ b/contrib/vagrant/Vagrantfile
@@ -24,7 +24,7 @@ Vagrant::configure("2") do |config|
     # please see the online documentation at vagrantup.com.
 
     # Every Vagrant virtual environment requires a box to build off of.
-    config.vm.box = "gitian-host-bionic64"
+    config.vm.box = "gitian-host-xenial64"
 
     config.vm.provider :virtualbox do |vb|
         # Set RAM to 2.5GB
