[Version] Switch to Freicoin/Tradecraft versioning scheme for version strings.
In comparison to bitcoin release numbers, we promote minor version numbers to major, so for example release "0.10.4" becomes "10.4"; we repurpose the revision number as a subproject release number, so "10.4.1" is the second release based of upstream "0.10.4"; and we repurpose the build number as a monotonically increasing release number.

--- a/contrib/vagrant/Makefile
+++ b/contrib/vagrant/Makefile
@@ -358,12 +358,13 @@ rightparen=)
 CLIENT_VERSION_MAJOR := $(shell $(GREP) _CLIENT_VERSION_MAJOR ../../configure.ac | head -n 1 | $(AWK) -F'[ $(rightparen)]' '{print $$2}')
 CLIENT_VERSION_MINOR := $(shell $(GREP) _CLIENT_VERSION_MINOR ../../configure.ac | head -n 1 | $(AWK) -F'[ $(rightparen)]' '{print $$2}')
 CLIENT_VERSION_REVISION := $(shell $(GREP) _CLIENT_VERSION_REVISION ../../configure.ac | head -n 1 | $(AWK) -F'[ $(rightparen)]' '{print $$2}')
+CLIENT_VERSION_BUILD := $(shell $(GREP) _CLIENT_VERSION_BUILD ../../configure.ac | head -n 1 | $(AWK) -F'[ $(rightparen)]' '{print $$2}')
 ifeq ($(CLIENT_VERSION_REVISION), 99)
 SERIES := $(CLIENT_VERSION_MAJOR).$(shell expr 1 + $(CLIENT_VERSION_MINOR))
-VERSION := $(SERIES)
+VERSION := $(SERIES)-$(CLIENT_VERSION_BUILD)
 else
 SERIES := $(CLIENT_VERSION_MAJOR).$(CLIENT_VERSION_MINOR)
-VERSION := $(SERIES).$(CLIENT_VERSION_REVISION)
+VERSION := $(SERIES).$(CLIENT_VERSION_REVISION)-$(CLIENT_VERSION_BUILD)
 endif
 
 OUTPUT_DIR         := output
