f '[Version] Switch to Freicoin/Tradecraft versioning scheme for version strings.'
Add "patch" level to the version scheme, a 4th field which indicates minor updates to the previous release.

--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,8 @@ AC_PREREQ([2.60])
 define(_CLIENT_VERSION_MAJOR, 12)
 define(_CLIENT_VERSION_MINOR, 1)
 define(_CLIENT_VERSION_REVISION, 3)
-define(_CLIENT_VERSION_BASE_STRING, ifelse(_CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION,0.0,_CLIENT_VERSION_MAJOR,ifelse(_CLIENT_VERSION_REVISION,0,_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR,_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION)))
+define(_CLIENT_VERSION_PATCH, 0)
+define(_CLIENT_VERSION_BASE_STRING, ifelse(_CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION._CLIENT_VERSION_PATCH,0.0.0,_CLIENT_VERSION_MAJOR,ifelse(_CLIENT_VERSION_REVISION._CLIENT_VERSION_PATCH,0.0,_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR._CLIENT_VERSION_PATCH,_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION._CLIENT_VERSION_PATCH)))
 define(_CLIENT_VERSION_BUILD, 10161)
 define(_CLIENT_VERSION_IS_RELEASE, true)
 define(_COPYRIGHT_YEAR, 2019)
@@ -932,6 +933,7 @@ AM_CONDITIONAL([HARDEN],[test x$use_hardening = xyes])
 AC_DEFINE(CLIENT_VERSION_MAJOR, _CLIENT_VERSION_MAJOR, [Major version])
 AC_DEFINE(CLIENT_VERSION_MINOR, _CLIENT_VERSION_MINOR, [Minor version])
 AC_DEFINE(CLIENT_VERSION_REVISION, _CLIENT_VERSION_REVISION, [Build revision])
+AC_DEFINE(CLIENT_VERSION_PATCH, _CLIENT_VERSION_PATCH, [Patch version])
 AC_DEFINE(CLIENT_VERSION_BASE_STRING, _CLIENT_VERSION_BASE_STRING, [Version base string])
 AC_DEFINE(CLIENT_VERSION_BUILD, _CLIENT_VERSION_BUILD, [Version Build])
 AC_DEFINE(CLIENT_VERSION_IS_RELEASE, _CLIENT_VERSION_IS_RELEASE, [Version is release])
@@ -939,6 +941,7 @@ AC_DEFINE(COPYRIGHT_YEAR, _COPYRIGHT_YEAR, [Version is release])
 AC_SUBST(CLIENT_VERSION_MAJOR, _CLIENT_VERSION_MAJOR)
 AC_SUBST(CLIENT_VERSION_MINOR, _CLIENT_VERSION_MINOR)
 AC_SUBST(CLIENT_VERSION_REVISION, _CLIENT_VERSION_REVISION)
+AC_SUBST(CLIENT_VERSION_PATCH, _CLIENT_VERSION_PATCH)
 AC_SUBST(CLIENT_VERSION_BASE_STRING, _CLIENT_VERSION_BASE_STRING)
 AC_SUBST(CLIENT_VERSION_BUILD, _CLIENT_VERSION_BUILD)
 AC_SUBST(CLIENT_VERSION_IS_RELEASE, _CLIENT_VERSION_IS_RELEASE)
